--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,1 @@
-{"last_ticker": "ALICE/USD", "last_timeframe": "4h", "last_since": "2022-09-30T13:59:41Z"}
+{"last_ticker": "BTC/USDT", "last_timeframe": "1m", "last_since": "2022-10-01T19:00:00.000Z"}
