--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,1 @@
-{"last_ticker": "BTC/USDT", "last_timeframe": "1m", "last_since": "2022-10-01T00:00:00Z"}
+{"last_symbol": "BTC/USDT", "last_timeframe": "5m", "last_since": "2022-10-05T00:00:00Z", "favorite_symbols": ["BTC/USDT", "ETH/USDT", "LINK/USDT", "SOL/USDT"]}
