--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,1 @@
-{"last_symbol": "XRP/USDT", "last_timeframe": "4h", "last_since": "2022-10-16T00:00:00Z", "favorite_symbols": ["BTC/USDT", "ETH/USDT", "LINK/USDT", "SOL/USDT"]}
+{"last_symbol": "BTC/USDT", "last_timeframe": "1m", "last_since": "2020-01-01T00:00:00Z", "favorite_symbols": ["BTC/USDT", "ETH/USDT", "LINK/USDT", "SOL/USDT"]}
