--- a/dpg.ini
+++ b/dpg.ini
@@ -29,7 +29,47 @@ Size=800,800
 Collapsed=0
 
 [Window][###62]
-Pos=374,193
+Pos=1341,181
 Size=400,500
+Collapsed=0
+
+[Window][###74]
+Pos=1276,269
+Size=400,500
+Collapsed=0
+
+[Window][###75]
+Pos=729,116
+Size=810,800
+Collapsed=0
+
+[Window][Dear ImGui Demo]
+Pos=385,225
+Size=550,680
+Collapsed=0
+
+[Window][ImPlot Demo]
+Pos=50,50
+Size=600,750
+Collapsed=0
+
+[Window][###48]
+Pos=1043,78
+Size=800,800
+Collapsed=0
+
+[Window][###53]
+Pos=100,100
+Size=800,800
+Collapsed=0
+
+[Window][###36]
+Pos=1355,310
+Size=400,500
+Collapsed=0
+
+[Window][###49]
+Pos=884,139
+Size=800,800
 Collapsed=0
 
