Fixed charts that were not updating correctly

--- a/dpg.ini
+++ b/dpg.ini
@@ -73,3 +73,23 @@ Pos=884,139
 Size=800,800
 Collapsed=0
 
+[Window][###66]
+Pos=0,25
+Size=400,500
+Collapsed=0
+
+[Window][###126]
+Pos=1748,651
+Size=167,125
+Collapsed=0
+
+[Window][###142]
+Pos=297,136
+Size=313,279
+Collapsed=0
+
+[Window][###82]
+Pos=1502,237
+Size=400,500
+Collapsed=0
+
