Now I fixed chart bug.
There was a bug where the chart would not switch symbols or timeframes because the chart id was not being passed correctly.

--- a/dpg.ini
+++ b/dpg.ini
@@ -93,3 +93,36 @@ Pos=1502,237
 Size=400,500
 Collapsed=0
 
+[Window][###67]
+Pos=596,194
+Size=1237,700
+Collapsed=0
+
+[Window][###37]
+Pos=60,41
+Size=1604,998
+Collapsed=0
+
+[Window][###50]
+Pos=637,69
+Size=800,800
+Collapsed=0
+
+[Window][###1253]
+Pos=1351,276
+Size=400,500
+Collapsed=0
+
+[Table][0x196D3591,11]
+Column 0  Weight=1.3186
+Column 1  Weight=0.6764
+Column 2  Weight=0.9975
+Column 3  Weight=0.9975
+Column 4  Weight=0.9975
+Column 5  Weight=0.9975
+Column 6  Weight=0.9975
+Column 7  Weight=1.0043
+Column 8  Weight=1.0043
+Column 9  Weight=1.0043
+Column 10 Weight=1.0043
+
