Added Coinalyze.net scraper

--- a/dpg.ini
+++ b/dpg.ini
@@ -113,6 +113,36 @@ Pos=1351,276
 Size=400,500
 Collapsed=0
 
+[Window][###38]
+Pos=143,121
+Size=954,510
+Collapsed=0
+
+[Window][###1254]
+Pos=0,25
+Size=800,1000
+Collapsed=0
+
+[Window][###68]
+Pos=485,44
+Size=1336,1007
+Collapsed=0
+
+[Window][###70]
+Pos=95,43
+Size=1832,1007
+Collapsed=0
+
+[Window][###1326]
+Pos=100,100
+Size=800,800
+Collapsed=0
+
+[Window][###1281]
+Pos=1136,486
+Size=400,500
+Collapsed=0
+
 [Table][0x196D3591,11]
 Column 0  Weight=1.3186
 Column 1  Weight=0.6764
@@ -125,4 +155,43 @@ Column 7  Weight=1.0043
 Column 8  Weight=1.0043
 Column 9  Weight=1.0043
 Column 10 Weight=1.0043
+
+[Table][0xF6AFBBEC,11]
+Column 0  Weight=1.7148
+Column 1  Weight=0.2736
+Column 2  Weight=0.9942
+Column 3  Weight=0.9942
+Column 4  Weight=1.0033
+Column 5  Weight=1.0033
+Column 6  Weight=1.0033
+Column 7  Weight=1.0033
+Column 8  Weight=1.0033
+Column 9  Weight=1.0033
+Column 10 Weight=1.0033
+
+[Table][0x1DC0B52D,11]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+Column 5  Weight=1.0000
+Column 6  Weight=1.0000
+Column 7  Weight=1.0000
+Column 8  Weight=1.0000
+Column 9  Weight=1.0000
+Column 10 Weight=1.0000
+
+[Table][0x881A4AC9,11]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+Column 5  Weight=1.0000
+Column 6  Weight=1.0000
+Column 7  Weight=1.0000
+Column 8  Weight=1.0000
+Column 9  Weight=1.0000
+Column 10 Weight=1.0000
 
