Added exchange menu

--- a/dpg.ini
+++ b/dpg.ini
@@ -143,6 +143,16 @@ Pos=15,60
 Size=800,1000
 Collapsed=0
 
+[Window][###39]
+Pos=378,163
+Size=700,500
+Collapsed=0
+
+[Window][###22]
+Pos=163,246
+Size=362,259
+Collapsed=0
+
 [Table][0x196D3591,11]
 Column 0  Weight=1.3186
 Column 1  Weight=0.6764
