fixed exchange settings

--- a/dpg.ini
+++ b/dpg.ini
@@ -39,8 +39,8 @@ Size=400,500
 Collapsed=0
 
 [Window][###75]
-Pos=729,116
-Size=810,800
+Pos=0,25
+Size=500,350
 Collapsed=0
 
 [Window][Dear ImGui Demo]
@@ -144,13 +144,33 @@ Size=800,1000
 Collapsed=0
 
 [Window][###39]
-Pos=378,163
-Size=700,500
+Pos=0,25
+Size=500,350
 Collapsed=0
 
 [Window][###22]
 Pos=163,246
 Size=362,259
+Collapsed=0
+
+[Window][###45]
+Pos=0,25
+Size=500,350
+Collapsed=0
+
+[Window][###51]
+Pos=0,25
+Size=500,350
+Collapsed=0
+
+[Window][###57]
+Pos=0,25
+Size=500,350
+Collapsed=0
+
+[Window][###63]
+Pos=0,25
+Size=500,350
 Collapsed=0
 
 [Table][0x196D3591,11]
@@ -193,6 +213,19 @@ Column 9  Weight=1.0000
 Column 10 Weight=1.0000
 
 [Table][0x881A4AC9,11]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+Column 5  Weight=1.0000
+Column 6  Weight=1.0000
+Column 7  Weight=1.0000
+Column 8  Weight=1.0000
+Column 9  Weight=1.0000
+Column 10 Weight=1.0000
+
+[Table][0x8EFCC045,11]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 Column 2  Weight=1.0000
