--- a/dpg.ini
+++ b/dpg.ini
@@ -173,6 +173,21 @@ Pos=0,25
 Size=500,350
 Collapsed=0
 
+[Window][###1258]
+Pos=625,82
+Size=400,500
+Collapsed=0
+
+[Window][###99]
+Pos=0,25
+Size=500,350
+Collapsed=0
+
+[Window][###69]
+Pos=0,25
+Size=500,350
+Collapsed=0
+
 [Table][0x196D3591,11]
 Column 0  Weight=1.3186
 Column 1  Weight=0.6764
@@ -226,6 +241,19 @@ Column 9  Weight=1.0000
 Column 10 Weight=1.0000
 
 [Table][0x8EFCC045,11]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+Column 5  Weight=1.0000
+Column 6  Weight=1.0000
+Column 7  Weight=1.0000
+Column 8  Weight=1.0000
+Column 9  Weight=1.0000
+Column 10 Weight=1.0000
+
+[Table][0x2782E9F7,11]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 Column 2  Weight=1.0000
