--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,1 @@
-{"exchange": {"name": "ftx", "key": "", "secret": ""}, "last_symbol": "BTC/USDT", "last_timeframe": "5m", "last_since": "2022-10-01T00:00:00Z", "favorite_symbols": ["BTC/USDT", "ETH/USDT", "LINK/USDT", "SOL/USDT"]}
+{"exchange": {"name": "binance", "key": "", "secret": ""}, "last_symbol": "BTC/USDT", "last_timeframe": "1m", "last_since": "2022-10-01T00:00:00Z", "favorite_symbols": ["BTC/USDT", "ETH/USDT", "LINK/USDT", "SOL/USDT"]}
