--- a/dpg.ini
+++ b/dpg.ini
@@ -145,7 +145,7 @@ Collapsed=0
 
 [Window][###39]
 Pos=0,25
-Size=500,350
+Size=400,500
 Collapsed=0
 
 [Window][###22]
@@ -184,6 +184,11 @@ Size=500,350
 Collapsed=0
 
 [Window][###69]
+Pos=0,25
+Size=500,350
+Collapsed=0
+
+[Window][###71]
 Pos=0,25
 Size=500,350
 Collapsed=0
